readytousenlp to readytouseai

--- a/notebooks/word2vec_and_fasttext.ipynb
+++ b/notebooks/word2vec_and_fasttext.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/kiyoungkim1/ReadyToUseNlp/blob/main/notebooks/word2vec_and_fasttext.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/kiyoungkim1/ReadyToUseAI/blob/main/notebooks/word2vec_and_fasttext.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -51,9 +51,9 @@
         "id": "ceUDoT3ZEfWB"
       },
       "source": [
-        "!git clone https://github.com/kiyoungkim1/ReadyToUseNlp\r\n",
+        "!git clone https://github.com/kiyoungkim1/ReadyToUseAI\r\n",
         "\r\n",
-        "from ReadyToUseNlp.src import make_sample_dataset, word2vec, fasttext\r\n",
+        "from ReadyToUseAI.src import make_sample_dataset, word2vec, fasttext\r\n",
         "make_sample_dataset.nsmc(mode='train', text_only=True)"
       ],
       "execution_count": null,
