readytousenlp to readytouseai

--- a/notebooks/count_and_tfidf.ipynb
+++ b/notebooks/count_and_tfidf.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/kiyoungkim1/ReadyToUseNlp/blob/main/notebooks/count_and_tfidf.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/kiyoungkim1/ReadyToUseAI/blob/main/notebooks/count_and_tfidf.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -43,9 +43,9 @@
         "id": "yAbZ99ufAUus"
       },
       "source": [
-        "!git clone https://github.com/kiyoungkim1/ReadyToUseNlp\r\n",
+        "!git clone https://github.com/kiyoungkim1/ReadyToUseAI\r\n",
         "\r\n",
-        "from ReadyToUseNlp.src import make_sample_dataset, count, tfidf\r\n",
+        "from ReadyToUseAI.src import make_sample_dataset, count, tfidf\r\n",
         "make_sample_dataset.simple()"
       ],
       "execution_count": null,
