--- a/notebooks/nlp/count_and_tfidf.ipynb
+++ b/notebooks/nlp/count_and_tfidf.ipynb
@@ -52,27 +52,7 @@
     "make_sample_dataset.simple()"
    ],
    "execution_count": 3,
-   "outputs": [
-    {
-     "output_type": "stream",
-     "text": [
-      "fatal: destination path 'ReadyToUseAI' already exists and is not an empty directory.\n"
-     ],
-     "name": "stdout"
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "['학교에 가서 수업을 들었다. 학교에 간건 오랜만이다.', '학교에 가서 친구 얘기를 들었다.', '내일 가서 뭐 먹지?']"
-      ]
-     },
-     "metadata": {
-      "tags": []
-     },
-     "execution_count": 3
-    }
-   ]
+   "outputs": []
   },
   {
    "cell_type": "markdown",
@@ -131,7 +111,7 @@
     "# 단어 빈도수를 계산 후 아래의 text와 유사한 문장 고르기\n",
     "\n",
     "text = '수업을 들은건 오랜만이다'\n",
-    "df = count.find_similar_sentence(text, dataset_path='dataset.txt', type='count', save_path='count_similarity.xlsx')\n",
+    "df = count_and_tfidf.find_similar_sentence(text, dataset_path='dataset.txt', type='count', save_path='count_similarity.xlsx')\n",
     "df"
    ],
    "execution_count": null,
@@ -146,7 +126,7 @@
     "# TFIDF를 계산 후 아래의 text와 유사한 문장 고르기\n",
     "\n",
     "text = '수업을 들은건 오랜만이다'\n",
-    "df = tfidf.find_similar_sentence(text, dataset_path='dataset.txt', type='tfidf', save_path='tfidf_similarity.xlsx')\n",
+    "df = count_and_tfidf.find_similar_sentence(text, dataset_path='dataset.txt', type='tfidf', save_path='tfidf_similarity.xlsx')\n",
     "df"
    ],
    "execution_count": null,
